Fixed the login button not being aligned properly

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,3 +19,7 @@
 .sidenav-button {
   width: 100%;
 }
+
+.toolbarButton {
+  margin-left: auto;
+}
